<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBlue"
    tools:context="repsoldemo.ibm.com.demorepsol.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:src="@mipmap/ibmrepsol3"
        android:id="@+id/imageView"
        tools:ignore="ContentDescription"
        android:layout_gravity="fill_horizontal"
        android:layout_height="140dp" />

    <LinearLayout
        android:layout_width="match_parent"
        tools:ignore="UselessLeaf"
        android:layout_height="90dp"
        android:id="@+id/row1"
        android:layout_marginTop="20dp">


        <Button
            android:text="@string/stock"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:background="@drawable/borderbutton"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:id="@+id/stock"
            tools:ignore="ButtonStyle"
            android:layout_width="160dp" />

        <Button
            android:text="@string/viento"
            android:layout_marginStart="8dp"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:background="@drawable/borderbutton"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:id="@+id/viento"
            tools:ignore="ButtonStyle"
            android:layout_width="160dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        tools:ignore="UselessLeaf"
        android:layout_height="90dp"
        android:id="@+id/row2">


        <Button
            android:text="@string/contaminacion"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:background="@drawable/borderbutton"
            android:layout_height="match_parent"
            android:id="@+id/contaminacion"
            android:textSize="18sp"
            tools:ignore="ButtonStyle"
            android:layout_width="160dp" />

        <Button
            android:text="@string/incendio"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:background="@drawable/borderbutton"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:id="@+id/incendio"
            tools:ignore="ButtonStyle"
            android:layout_width="160dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/row4"
        tools:ignore="Orientation"
        android:layout_marginBottom="25dp">

        <Button
            android:text="@string/exit"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:background="@drawable/borderbutton"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:id="@+id/exit"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
